section/ingress/traefik/argocd.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https-middleware
  namespace: argocd
spec:
  redirectScheme:
    scheme: https
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  entryPoints:
    - web
    - websecure 
  tls:
    secretName: cuiliangblog-tls               
  routes:
  - match: Host(`argocd.cuiliangblog.cn`)
    kind: Rule
    services:
    - name: argocd-server
      port: 443
      serversTransport: argocd-transport
    middlewares:
    - name: redirect-https-middleware
